fixed bottom scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -13,11 +13,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-}
-
 .container {
     width: 600px;
     margin: auto;
